--- a/src/main/resources/templates/new-post.html
+++ b/src/main/resources/templates/new-post.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body class="bg-light py-4">
+<body class="bg-light pb-4">
+<div th:replace="fragments/navbar :: navbar"></div>
+
 <div class="container">
     <h3>Create New Post</h3>
     <form th:action="@{/post/new}" method="post">
