--- a/src/main/resources/templates/post-comments.html
+++ b/src/main/resources/templates/post-comments.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body class="bg-light py-4">
+<body class="bg-light pb-4">
+<div th:replace="fragments/navbar :: navbar"></div>
 
 <div class="container">
-    <a href="/post-feed" class="btn btn-secondary mb-4">Return to Home</a>
-
     <div class="card mb-4">
         <div class="card-body">
             <h4 class="card-title" th:text="${post.text}"></h4>
