--- a/src/main/resources/templates/post-feed.html
+++ b/src/main/resources/templates/post-feed.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body class="bg-light py-4">
+<body class="bg-light pb-4">
+<div th:replace="fragments/navbar :: navbar"></div>
 
 <!-- Same head and Bootstrap links as before -->
 <div class="container">
