--- a/src/main/resources/templates/new-post.html
+++ b/src/main/resources/templates/new-post.html
@@ -20,7 +20,7 @@
             <input id="potpis" name="potpis" class="form-control"/>
         </div>
         <button type="submit" class="btn btn-primary">Publish</button>
-        <a href="/post-feed" class="btn btn-secondary">Cancel</a>
+        <a href="/post" class="btn btn-secondary">Cancel</a>
     </form>
 </div>
 </body>
